2005-09-20  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDefaults.java:
	(test): use more specific test for 'PasswordField.border'.

2005-09-20  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/getButtonBorder.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/getDesktopIconBorder.java
	(test): added check for UIResource,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/getTextBorder.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/getTextFieldBorder.java: new test,
	* gnu/testlet/javax/swing/plaf/metal/MetalBorders/getToggleButtonBorder.java: new test.

2005-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/filechooser/FileView/getDescription.java: new test,
	* gnu/testlet/javax/swing/filechooser/FileView/getIcon.java: new test,
	* gnu/testlet/javax/swing/filechooser/FileView/getName.java: new test,
	* gnu/testlet/javax/swing/filechooser/FileView/getTypeDescription.java: new test,
	* gnu/testlet/javax/swing/filechooser/FileView/isTraversable.java: new test,
	* gnu/testlet/javax/swing/filechooser/FileView/MyFileView.java: new support class.

2005-09-19  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JFrame/glassPaneLayout.java: New test.

2005-09-19  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/JLayeredPane/defaultLayoutManager.java:
	New test.

2005-09-18  Tom Tromey  <tromey@redhat.com>

	* .settings/org.eclipse.jdt.ui.prefs: Added file template.

2005-09-18  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/Long/Tests15.java: New file.

2005-09-16    Audrius Meskauskas  <AudriusA@Bioinformatics.org>

        * gnu/testlet/javax/swing/Timer/test_23918: New test.

2005-09-15  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/Frame/isDisplayable1.java: Add comments.